    zurückgegeben
  - CFile::Popen(const char *command, const char *mode, ...) umbenannt in
    Popenf
  - OpenTemp akzeptiert nurnoch einen Parameter vom Typ CString, die bisherige
    Funktion mit Formatstring und variabler Anzahl Parameter heisst jetzt
    OpenTempf
  - CFile::Size führt zunächst ein fflush aus, damit möglicherweise noch im
    Puffer befindliche Daten geschrieben werden.
  
Version 6.4.17 vom 03.11.2013	(SVN-Tag: REL_6_4_17)
  - Cppl6Core ist nicht mehr von CDebug/CLog abgeleitet
  - CArray::Explode: Performance wurde drastisch verbessert
  - CArray: Neue Funktion "Reserve", zum Vorallokieren von Speicher
  - CArray: Neuer Konstruktor mit Explode-Funktion
  - Bugfix in CAssocArray::CreateFromConfig: Bei Angabe von "dotrim=false"
    wurde am Ende doch getrimmt
  - Testsuite um Tests für CAssocArray-Klasse ergänzt (Backport von PPL7)
  - Bugfix: CleanupThreadData hat zwar das Datenobjekt gelöscht, nicht aber
    den Pointer darauf innerhalb der posix threads
  - PPLExit ruft nun CleanupThreadData auf
  - CleanupThreadData ist nun auch für Windows implementiert
  - Makefile: pplgenresource verwendet nun das lokale config-ppl6-Skript
    und die lokale Bibliothek
  - configure: libshout kann jetzt mit --without-libshout abgeschaltet
    werden
  - ppl6-unixconfig.h enthält nurnoch die Typdefinitionen, aber nicht mehr die
    ganzen HAVE_xzy Direktiven
  - Datentyp "mode_t" wird in ppl.h nicht mehr verwendet
  - CTCPSocket::Bind: Hostname und Port werden nun gespeichert und können mit
    den neuen Funktionen "getHostname" und "getPort" abgefragt werden.
  - Webserver::start: Exception "CouldNotStartDaemon" hat jetzt zusätzliche
    Informationen über den aufgetretenen Fehler
  - Webserver: Neue Funktionen: getHostname, getPort
  - configure: Erkennung für libmicrohttpd verbessert
  - configure: Erkennung für curl-config verbessert
  - ppl6-config: Option "--features" unterstützt nun optionale Angabe der