@@ -43,6 +43,10 @@ Version 6.4.18
     OpenTempf
   - CFile::Size führt zunächst ein fflush aus, damit möglicherweise noch im
     Puffer befindliche Daten geschrieben werden.
+  - CFileObject::SetFilename(const char *filename, ...) umbenannt in
+    SetFilenamef
+  - CFile::Seek, Fseek, Ftell, Size und Lof haben keine Funktion mehr,
+    bzw. geben 0 zurück, wenn die geöffnete Datei eine Pipe ist.
   
 Version 6.4.17 vom 03.11.2013	(SVN-Tag: REL_6_4_17)
   - Cppl6Core ist nicht mehr von CDebug/CLog abgeleitet
